deploy/kubernetes/ticker/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ticker
  name: ticker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ticker
    spec:
      containers:
        - name: ticker
          image: eb129/ticker
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512M
            requests:
              cpu: 250m
              memory: 256M
