deploy/kubernetes/ticker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticker
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ticker
